[package]
name = "haneul-config"
version = "0.0.0"
authors = ["Haneul Labs <build@haneul-labs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anemo.workspace = true
anyhow = { workspace = true, features = ["backtrace"] }
bcs.workspace = true
csv.workspace = true
dirs.workspace = true
fastcrypto.workspace = true
once_cell.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
serde_with.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
prometheus.workspace = true

narwhal-config.workspace = true
haneul-keys.workspace = true
haneul-protocol-config.workspace = true
haneul-storage.workspace = true
haneul-types.workspace = true
workspace-hack.workspace = true

[target.'cfg(msim)'.dependencies]
haneul-simulator.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
haneul-types = { workspace = true, features = ["test-utils"] }
