[package]
name = "haneul-config"
version = "0.0.0"
authors = ["Haneul Labs <build@haneul-labs.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[lints]
workspace = true

[dependencies]
anemo.workspace = true
anyhow = { workspace = true, features = ["backtrace"] }
bcs.workspace = true
csv.workspace = true
dirs.workspace = true
fastcrypto.workspace = true
nonzero_ext.workspace = true
once_cell.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
serde_with.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
prometheus.workspace = true
clap.workspace = true
object_store.workspace = true
reqwest.workspace = true
starlark.workspace = true
thiserror.workspace = true
serde_json.workspace = true

consensus-config.workspace = true
haneul-keys.workspace = true
haneul-protocol-config.workspace = true
haneul-types.workspace = true
move-vm-config.workspace = true
haneullabs-common.workspace = true

[dev-dependencies]
tempfile.workspace = true
