[package]
name = "haneul-core"
version.workspace = true
authors = ["Haneul Labs <build@haneul-labs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
rocksdb = "0.20.1"
dashmap = "5.4.0"
anyhow = { version = "1.0.64", features = ["backtrace"] }
bcs = "0.1.4"
chrono = "0.4.23"
futures = "0.3.23"
bytes = "1.3.0"
enum_dispatch = "^0.3"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.88"
serde_with = "2.1.0"
tokio = { workspace = true, features = ["full", "tracing", "test-util"] }
tokio-stream = { version = "0.1.8", features = ["sync", "net"] }
parking_lot = "0.12.1"
async-trait = "0.1.61"
tempfile = "3.3.0"
itertools = "0.10.4"
tracing = "0.1.36"
signature = "1.6.0"
prometheus = "0.13.3"
arc-swap = "1.5.1"
object_store = "=0.5.4"
tokio-retry = "0.3"
scopeguard = "1.1"
once_cell = "1.16"
tap = "1.0"
either = "1.8.0"
rand = "0.8.5"
expect-test = "1.4.0"
haneul-adapter = { path = "../haneul-adapter" }
haneul-framework = { path = "../haneul-framework" }
haneul-framework-build = { path = "../haneul-framework-build" }
haneul-network = { path = "../haneul-network" }
haneul-types = { path = "../haneul-types" }
haneul-storage = { path = "../haneul-storage" }
haneul-config = { path = "../haneul-config" }
haneul-json-rpc-types = { path = "../haneul-json-rpc-types" }
haneul-protocol-config = { path = "../haneul-protocol-config" }
lru = "0.10"

move-binary-format.workspace = true
move-bytecode-utils.workspace = true
move-core-types.workspace = true
move-vm-runtime.workspace = true
move-package.workspace = true

haneullabs-common.workspace = true
haneullabs-metrics = { path = "../haneullabs-metrics" }
narwhal-config = { path = "../../narwhal/config" }
narwhal-executor = { path = "../../narwhal/executor" }
narwhal-node = { path = "../../narwhal/node" }
narwhal-types = { path = "../../narwhal/types" }
narwhal-worker = { path = "../../narwhal/worker" }
telemetry-subscribers.workspace = true
typed-store.workspace = true
typed-store-derive.workspace = true
haneullabs-network.workspace = true

fastcrypto.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }
thiserror = "1.0.34"
eyre = "0.6.8"
num_cpus = "1.14.0"

haneul-simulator = { path = "../haneul-simulator" }
haneul-macros = { path = "../haneul-macros" }
shared-crypto = { path = "../shared-crypto" }

[dev-dependencies]
clap = { version = "3.2.17", features = ["derive"] }
criterion = { version = "0.4.0" }
fs_extra = "1.2.0"
more-asserts="0.3.1"
serde-reflection = "0.3.6"
serde_yaml = "0.8.26"
pretty_assertions = "1.2.1"
narwhal-test-utils = { path = "../../narwhal/test-utils" }
haneul-verifier = { path = "../haneul-verifier" }

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
pprof = { version = "0.11.0", features = ["cpp", "frame-pointer"] }

haneul-protocol-config = { path = "../haneul-protocol-config" }
haneul-macros = { path = "../haneul-macros" }

test-fuzz = "3.0.4"
test-utils = { path = "../test-utils" }

[[example]]
name = "generate-format"
path = "src/generate_format.rs"
test = false

[[bench]]
name = "verified_cert_cache_bench"
harness = false

[[bench]]
name = "batch_verification_bench"
harness = false
