[package]
name = "haneul-core"
version.workspace = true
authors = ["Haneul Labs <build@haneul-labs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = { version = "1.0.64", features = ["backtrace"] }
arc-swap = "1.5.1"
async-trait = "0.1.61"
bcs = "0.1.4"
bytes = "1.3.0"
chrono = "0.4.23"
dashmap = "5.4.0"
either = "1.8.0"
enum_dispatch = "^0.3"
eyre = "0.6.8"
futures = "0.3.23"
itertools = "0.10.4"
lru = "0.10"
num_cpus = "1.14.0"
object_store = "=0.5.4"
once_cell = "1.16"
parking_lot = "0.12.1"
prometheus = "0.13.3"
rand = "0.8.5"
rocksdb = "0.20.1"
scopeguard = "1.1"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.88"
serde_with = "2.1.0"
signature = "1.6.0"
tap = "1.0"
tempfile = "3.3.0"
thiserror = "1.0.34"
tokio = { workspace = true, features = ["full", "tracing", "test-util"] }
tokio-retry = "0.3"
tokio-stream = { version = "0.1.8", features = ["sync", "net"] }
tracing = "0.1.36"
url = "2.3.1"

fastcrypto.workspace = true
move-binary-format.workspace = true
move-bytecode-verifier.workspace = true
move-bytecode-utils.workspace = true
move-core-types.workspace = true
move-package.workspace = true
move-symbol-pool.workspace = true
move-vm-runtime.workspace = true
haneullabs-common.workspace = true
haneullabs-network.workspace = true
telemetry-subscribers.workspace = true
typed-store-derive.workspace = true
typed-store.workspace = true

# TODO use haneul-execution versioned crate
haneul-adapter = { path = "../../haneul-execution/latest/haneul-adapter", package = "haneul-adapter-latest" }
haneul-move-natives = { path = "../../haneul-execution/latest/haneul-move-natives", package = "haneul-move-natives-latest" }

haneullabs-metrics = { path = "../haneullabs-metrics" }
narwhal-config = { path = "../../narwhal/config" }
narwhal-crypto = { path = "../../narwhal/crypto" }
narwhal-executor = { path = "../../narwhal/executor" }
narwhal-network = { path = "../../narwhal/network" }
narwhal-node = { path = "../../narwhal/node" }
narwhal-types = { path = "../../narwhal/types" }
narwhal-worker = { path = "../../narwhal/worker" }
shared-crypto = { path = "../shared-crypto" }
haneul-config = { path = "../haneul-config" }
haneul-framework = { path = "../haneul-framework" }
haneul-json-rpc-types = { path = "../haneul-json-rpc-types" }
haneul-macros = { path = "../haneul-macros" }
haneul-move-build = { path = "../haneul-move-build" }
haneul-network = { path = "../haneul-network" }
haneul-protocol-config = { path = "../haneul-protocol-config" }
haneul-simulator = { path = "../haneul-simulator" }
haneul-storage = { path = "../haneul-storage" }
haneul-test-transaction-builder = { path = "../haneul-test-transaction-builder" }
haneul-types = { path = "../haneul-types" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
clap = { version = "3.2.17", features = ["derive"] }
criterion = { version = "0.4.0" }
expect-test = "1.4.0"
fs_extra = "1.3.0"
more-asserts="0.3.1"
pretty_assertions = "1.2.1"
serde-reflection = "0.3.6"
serde_yaml = "0.8.26"

move-symbol-pool.workspace = true

# TODO use haneul-execution versioned crate
haneul-verifier = { path = "../../haneul-execution/latest/haneul-verifier", package = "haneul-verifier-latest" }

narwhal-test-utils = { path = "../../narwhal/test-utils" }
haneul-types = { path = "../haneul-types", features = ["test-utils"] }

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
pprof = { version = "0.11.0", features = ["cpp", "frame-pointer"] }
test-fuzz = "3.0.4"

haneul-macros = { path = "../haneul-macros" }
haneul-protocol-config = { path = "../haneul-protocol-config" }
test-utils = { path = "../test-utils" }

[[example]]
name = "generate-format"
path = "src/generate_format.rs"
test = false

[[bench]]
name = "verified_cert_cache_bench"
harness = false

[[bench]]
name = "batch_verification_bench"
harness = false

[features]
test-utils = []
