[package]
name = "haneul-core"
version = "0.1.0"
authors = ["Haneul Labs <build@haneul-labs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
arc-swap.workspace = true
async-trait.workspace = true
bcs.workspace = true
bytes.workspace = true
chrono.workspace = true
dashmap.workspace = true
either.workspace = true
enum_dispatch.workspace = true
eyre.workspace = true
futures.workspace = true
im.workspace = true
indexmap.workspace = true
itertools.workspace = true
lru.workspace = true
num_cpus.workspace = true
object_store.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
prometheus.workspace = true
rand.workspace = true
rocksdb.workspace = true
scopeguard.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
signature.workspace = true
tap.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "tracing", "test-util"] }
tokio-retry.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

fastcrypto.workspace = true
fastcrypto-zkp.workspace = true
move-binary-format.workspace = true
move-bytecode-utils.workspace = true
move-core-types.workspace = true
move-package.workspace = true
move-symbol-pool.workspace = true
haneullabs-common.workspace = true
haneullabs-network.workspace = true
telemetry-subscribers.workspace = true
typed-store-derive.workspace = true
typed-store.workspace = true

haneullabs-metrics.workspace = true
narwhal-config.workspace = true
narwhal-crypto.workspace = true
narwhal-executor.workspace = true
narwhal-network.workspace = true
narwhal-node.workspace = true
narwhal-test-utils.workspace = true
narwhal-types.workspace = true
narwhal-worker.workspace = true
shared-crypto.workspace = true
haneul-archival.workspace = true
haneul-config.workspace = true
haneul-execution = { path = "../../haneul-execution" }
haneul-framework.workspace = true
haneul-swarm-config.workspace = true
haneul-genesis-builder.workspace = true
haneul-json-rpc-types.workspace = true
haneul-macros.workspace = true
haneul-move-build.workspace = true
haneul-network.workspace = true
haneul-protocol-config.workspace = true
haneul-transaction-checks.workspace = true
haneul-simulator.workspace = true
haneul-storage.workspace = true
haneul-types.workspace = true
workspace-hack.workspace = true
zeroize.workspace = true
mysticeti-core = { git = "https://github.com/GeunhwaJeong/mysticeti", rev = "0bc1ae8f6cc5b1eb22752fa37ba64bdaf358f7cf" }

[dev-dependencies]
clap.workspace = true
criterion.workspace = true
expect-test.workspace = true
fs_extra.workspace = true
more-asserts.workspace = true
pretty_assertions.workspace = true
serde-reflection.workspace = true
serde_yaml.workspace = true

move-symbol-pool.workspace = true

haneul-test-transaction-builder.workspace = true
haneul-types = { workspace = true, features = ["test-utils"] }

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
pprof.workspace = true
test-fuzz.workspace = true

haneul-macros.workspace = true
haneul-protocol-config.workspace = true

[[example]]
name = "generate-format"
path = "src/generate_format.rs"
test = false

[[bench]]
name = "verified_cert_cache_bench"
harness = false

[[bench]]
name = "batch_verification_bench"
harness = false

[features]
test-utils = []
