[package]
name = "haneul-cost-tables"
version = "0.1.0"
authors = ["Haneul Labs <build@haneul-labs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
move-binary-format.workspace = true
move-core-types.workspace = true
move-vm-types.workspace = true
workspace-hack = { version = "0.1", path = "../workspace-hack" }

haneul-protocol-constants = { path = "../haneul-protocol-constants" }

anyhow = { version = "1.0.64", features = ["backtrace"] }
serde = { version = "1.0.141", features = ["derive"] }
bcs = "0.1.4"
once_cell = "1.16"
