[package]
name = "haneul-cost"
version = "0.1.0"
authors = ["Haneul Labs <build@haneul-labs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
workspace-hack = { path = "../workspace-hack"}
haneul-types = {path = "../haneul-types"}
anyhow = { version = "1.0.58", features = ["backtrace"] }
tokio = { version = "1.20.1", features = ["full"] }
serde = { version = "1.0.144", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
toml = "0.5.9"
bcs = "0.1.3"

[dev-dependencies]
insta = { version = "1.17.1", features = ["redactions"] }
test-utils = { path = "../test-utils" }
haneul-config = {path = "../haneul-config"}