[package]
name = "haneul-cost"
version = "0.1.0"
authors = ["Haneul Labs <build@haneul-labs.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
haneul-types.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
bcs.workspace = true

[dev-dependencies]
insta.workspace = true
test-cluster.workspace = true
haneul-config.workspace = true
haneul-swarm-config.workspace = true
haneul-test-transaction-builder.workspace = true
haneul-move-build.workspace = true
move-disassembler.workspace = true
haneul-json-rpc-types.workspace = true
