[package]
name = "haneul-data-ingestion-core"
authors = ["Haneul Labs <build@haneul-labs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"
version = "0.1.0"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
backoff.workspace = true
futures.workspace = true
haneullabs-metrics.workspace = true
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
object_store.workspace = true
prometheus.workspace = true
telemetry-subscribers.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
haneul-storage.workspace = true
haneul-types.workspace = true
url.workspace = true

[dev-dependencies]
rand.workspace = true
tempfile.workspace = true
haneul-types = { workspace = true, features = ["test-utils"] }
